--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,8 +66,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\MenuScripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyAI.cs" />
+    <Compile Include="Assets\Scripts\Inventory\Inventory.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\PlayerVisial.cs" />
-    <Compile Include="Assets\Inventory\Inventory.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\PlayerAttack.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\GameInput.cs" />
     <Compile Include="Assets\Scripts\CameraFixation.cs" />
@@ -77,13 +77,13 @@
     <Compile Include="Assets\Scripts\MenuScripts\Music.cs" />
     <Compile Include="Assets\Scripts\Enemy\IdleBehavior.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyEntity.cs" />
-    <Compile Include="Assets\Inventory\DataBase.cs" />
     <Compile Include="Assets\Scripts\Enemy\PatrolBehaviour.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyVisual.cs" />
     <Compile Include="Assets\Scripts\Weapon\ActiveWeapon.cs" />
     <Compile Include="Assets\Scripts\Utils.cs" />
     <Compile Include="Assets\Scripts\Player Controls.cs" />
     <Compile Include="Assets\Scripts\Weapon\Sword.cs" />
+    <Compile Include="Assets\Scripts\Inventory\DataBase.cs" />
     <Compile Include="Assets\Scripts\MenuScripts\PauseMenu.cs" />
   </ItemGroup>
   <ItemGroup>
