--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\CameraFixation.cs" />
     <Compile Include="Assets\Scripts\Inventory\Chest.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\PlayerHealth.cs" />
+    <Compile Include="Assets\Scripts\Inventory\InventorySlotHandler.cs" />
     <Compile Include="Assets\Scripts\Weapon\SwordVisual.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\MenuScripts\Music.cs" />
